--- a/nursery_admission_buttons_fix/views/admission_menu.xml
+++ b/nursery_admission_buttons_fix/views/admission_menu.xml
@@ -1,5 +1,5 @@
 <odoo>
-    <record id="action_nursery_admission" model="ir.actions.act_window">
+      <record id="nursery_admission_buttons_fix.action_nursery_admission_stage" model="ir.actions.act_window">
         <field name="name">Admissions</field>
         <field name="res_model">nursery.admission</field>
         <field name="view_mode">tree,form</field>
@@ -11,4 +11,54 @@
               parent="menu_nursery_admission_root"
               action="nursery_admission_buttons_fix.action_nursery_admission"
               sequence="20"/>
+
+    <menuitem
+            id="menu_nursery_admission_configuration"
+            name="Configuration"
+            parent="menu_nursery_admission_root"
+            groups="base.group_user"
+            sequence="100"/>
+
+
+
+    <menuitem id="menu_nursery_admission_stage"
+          name="Stages"
+          parent="menu_nursery_admission_configuration"
+          action="nursery_admission_buttons_fix.action_nursery_admission_stage"/>
+
+
+    <record id="action_nursery_admission_stage" model="ir.actions.act_window">
+        <field name="name">Admission Stages</field>
+        <field name="res_model">nursery.admission.stage</field>
+        <field name="view_mode">tree,form</field>
+    </record>
+
+    <record id="view_nursery_admission_stage_tree" model="ir.ui.view">
+        <field name="name">nursery.admission.stage.tree</field>
+        <field name="model">nursery.admission.stage</field>
+        <field name="arch" type="xml">
+            <tree>
+                <field name="name"/>
+                <field name="sequence"/>
+                <field name="is_done"/>
+                <field name="fold"/>
+            </tree>
+        </field>
+    </record>
+
+    <record id="view_nursery_admission_stage_form" model="ir.ui.view">
+        <field name="name">nursery.admission.stage.form</field>
+        <field name="model">nursery.admission.stage</field>
+        <field name="arch" type="xml">
+            <form>
+                <group>
+                    <field name="name"/>
+                    <field name="sequence"/>
+                    <field name="is_done"/>
+                    <field name="fold"/>
+                </group>
+            </form>
+        </field>
+    </record>
+
 </odoo>
