--- a/nursery_admission_buttons_fix/views/admission_website_templates.xml
+++ b/nursery_admission_buttons_fix/views/admission_website_templates.xml
@@ -4,7 +4,9 @@
         <t t-call="website.layout">
             <div class="container mt-5">
                 <h1>Admission Inquiry</h1>
-                <form action="/nursery/submit" method="post" enctype="multipart/form-data">
+                        <form action="/nursery/submit" method="post" enctype="multipart/form-data">
+                        <input type="hidden" name="csrf_token" t-att-value="request.csrf_token()"/>
+
                     <div class="row">
                         <div class="col-md-6">
                             <label>Child's Name</label>
